--- a/SupplierRanking/Content/css/ftco.css
+++ b/SupplierRanking/Content/css/ftco.css
@@ -1,44 +1,90 @@
-﻿
-.ftco-section 
-	.ftco-sub-title {
-		font-size: 16px;
-		text-transform: uppercase;
-		letter-spacing: .5em;
-		color: lighten(#ccc, 3%);
-		font-family: $font-family-sans-serif;
-		font-weight: 300;
-	}
-	.ftco-primary-title {
-		margin-top: 0;
-		margin-bottom: 30px;
+﻿/***** TABLET *****/
+@media (max-width: 768px) {
+	.ftco-section-2 .section-2-blocks-wrapper .button {
+		top: auto;
+		bottom: 0 !important;
+		margin-right: auto;
+		right: auto;
+		left: 50%;
+		margin-bottom: -50px;
+		-webkit-transform: translateX(-50%);
+		-ms-transform: translateX(-50%);
+		transform: translateX(-50%);
 	}
 
-.ftco-counter {
-  margin-top: -100px; }
-  @media (max-width: 576px) {
-    .ftco-counter {
-      margin-top: -120px; } }
-  .ftco-counter .container {
-    z-index: 2;
-    position: relative;
-    background: #fff !important;
-    padding: 30px; }
-    @media (min-width: 768px) {
-      .ftco-counter .container {
-        padding: 70px;
-        padding-top: 40px; } }
-  .ftco-counter .text strong.number {
-    font-weight: 400;
-    font-size: 34px; }
-  @media (max-width:  576px) {
-    .ftco-counter .counter-wrap {
-      margin-bottom: 20px; } }
-  .ftco-counter .ftco-number {
-    display: block;
-    font-size: 72px;
-    font-weight: bold;
-    color: #0962ea; }
-  .ftco-counter .ftco-label {
-    font-size: 12px;
-    text-transform: uppercase;
-    letter-spacing: .1em; }
+    .ftco-section-2 .section-2-blocks-wrapper .text {
+		padding: 10% 7%;
+	}
+
+    .ftco-section-2 .section-2-blocks-wrapper .img {
+		height: 400px;
+		margin-bottom: 70px;
+	}
+}
+
+/***** DESKTOP *****/
+.ftco-section {
+	padding: 4em 0;
+}
+
+.ftco-bg-dark {
+	background: #3c312e;
+}
+
+.ftco-section .ftco-sub-title {
+	font-size: 16px;
+	text-transform: uppercase;
+	letter-spacing: .5em;
+	color: #d4d4d4;
+	font-family: "Quicksand", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+	font-weight: 300;
+}
+
+.ftco-section .ftco-primary-title {
+	margin-top: 0;
+	margin-bottom: 30px;
+}
+
+.ftco-section-2 .section-2-blocks-wrapper .button {
+	display: block;
+	position: absolute;
+	width: 100px;
+	height: 100px;
+	right: 0;
+	margin-right: -50px;
+	border-radius: 50%;
+	background: #0962ea;
+	z-index: 100;
+	top: 50%;
+	-webkit-transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
+	transform: translateY(-50%);
+	-webkit-animation: pulse 2s infinite;
+	animation: pulse 2s infinite;
+}
+
+.ftco-section-2 .section-2-blocks-wrapper .button span {
+	position: absolute;
+	font-size: 30px;
+	color: #fff;
+	top: 50%;
+	left: 50%;
+	-webkit-transform: translate(-30%, -48%);
+	-ms-transform: translate(-30%, -48%);
+	transform: translate(-30%, -48%);
+}
+
+.ftco-section-2 .section-2-blocks-wrapper .text {
+	position: relative;
+	z-index: -1;
+	padding: 15px;
+}
+
+.ftco-section-2 .section-2-blocks-wrapper .text h3 {
+	margin-bottom: 50px;
+}
+
+.ftco-section-2 .section-2-blocks-wrapper .img {
+	background-position: center center;
+	background-size: cover;
+}
