--- a/SupplierRanking/Content/css/style.css
+++ b/SupplierRanking/Content/css/style.css
@@ -4,23 +4,21 @@
 @import "../css/cover_overlay.css";
 @import "../css/footer.css";
 @import "../css/ftco.css";
+@import "../css/loader.css";
 /*@import "../css/main.css";*/
+@import "../css/media.css";
 @import "../css/menu.css";
 @import "../css/planos.css";
 @import "../css/sobre_nos.css";
 /*@import "../css/util.css";*/
 
-
-
-
-
 /*
     Valores para substituir nos @media
 
-    767.98px = 576px    (sm)
-    991.98px = 768px    (md)
-             = 992px    (lg)
-             = 1200px   (xl)
+    767.98px  = 576px    (sm)
+    991.98px  = 768px    (md)
+    1199.98px = 992px    (lg)
+              = 1200px   (xl)
 
 */
 
@@ -68,77 +66,70 @@
 .btn:hover,
 .btn:active,
 .btn:focus {
-        outline: none;
-    }
+     outline: none;
+}
 
-    .btn.btn-primary {
-        background: #0962ea;
-        border: 2px solid #0962ea;
-        color: #fff;
-    }
+.btn.btn-primary {
+    background: #0962ea;
+    border: 2px solid #0962ea;
+    color: #fff;
+}
 
-        .btn.btn-primary:hover {
-            border: 2px solid #0962ea;
-            background: transparent;
-            color: #0962ea;
-        }
+.btn.btn-primary:hover {
+    border: 2px solid #0962ea;
+    background: transparent;
+    color: #0962ea;
+}
 
-        .btn.btn-primary.btn-outline-primary {
-            border: 2px solid #0962ea;
-            background: transparent;
-            color: #0962ea;
-        }
+.btn.btn-primary.btn-outline-primary {
+    border: 2px solid #0962ea;
+    background: transparent;
+    color: #0962ea;
+}
 
-            .btn.btn-primary.btn-outline-primary:hover {
-                border: 2px solid transparent;
-                background: #0962ea;
-                color: #000;
-            }
+.btn.btn-primary.btn-outline-primary:hover {
+    border: 2px solid transparent;
+    background: #0962ea;
+    color: #000;
+}
 
-    .btn.btn-outline-white {
-        border-color: rgba(255, 255, 255, 0.8);
-        background: none;
-        border-radius: 0px;
-        border-width: 2px;
-    }
+.btn.btn-outline-white {
+    border-color: rgba(255, 255, 255, 0.8);
+    background: none;
+    border-radius: 0px;
+    border-width: 2px;
+}
 
 .btn.btn-outline-white:hover,
 .btn.btn-outline-white:focus,
 .btn.btn-outline-white:active {
-            background: #fff;
-            border-color: #fff;
-            color: #000;
-        }
-
-/************** Cards ***************/
-.media {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: start;
-  -ms-flex-align: start;
-  align-items: flex-start; 
+    background: #fff;
+    border-color: #fff;
+    color: #000;
 }
 
-.media-body {
-  -webkit-box-flex: 1;
-  -ms-flex: 1;
-  flex: 1; 
+
+/************** Ftco ***************/
+@media (max-width: 992px) {
+	.ftco-vh-100 {
+		height: inherit;
+		padding-top: 5em;
+		padding-bottom: 5em;
+	}
+
+    .ftco-vh-75 {
+		min-height: 700px;
+		height: inherit;
+		padding-top: 5em;
+		padding-bottom: 5em;
+	}
 }
 
-.media-custom {
-	background: #fff;
+.ftco-vh-100 {
+	height: 100vh;
 }
 
-.media-custom .media-body .name {
-	font-weight: 500;
-	font-size: 16px;
-	margin-bottom: 0;
-	color: #0962ea;
+.ftco-vh-75 {
+	height: 75vh;
+	min-height: 700px;
 }
-
-.media-custom .media-body .position {
-	font-size: 13px;
-	color: #d9d9d9;
-}
-
