--- a/SupplierRanking/Views/Home/Index.cshtml
+++ b/SupplierRanking/Views/Home/Index.cshtml
@@ -75,7 +75,7 @@
 <!-- FIM - Contador -->
 
 <!-- INÍCIO - Objetivos -->
-<section class="ftco-section">
+<section class="ftco-section bg-light">
     <div class="container">
         <div class="row justify-content-center mb-5 pb-5">
             <div class="col-md-7 text-center heading-section ftco-animate">
@@ -157,7 +157,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-6 d-flex align-self-stretch ftco-animate">
+            <div class="col-md-5 d-flex align-self-stretch ftco-animate">
                 <div class="media block-6 services p-3 py-4 d-block text-center">
                     <div class="icon mb-3">
                         <span class="flaticon-maintenance"></span>
@@ -166,14 +166,18 @@
                         <h3 class="heading">
                             Comprador
                         </h3>
-                        <p>
-                            Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.
-                        </p>
+                        <ul >
+                            <li>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</li>
+                            <li>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</li>
+                            <li>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</li>
+                        </ul>
                     </div>
                 </div>
             </div>
-            <div class="divider ftco-animate"></div>
-            <div class="col-md-6 d-flex align-self-stretch ftco-animate">
+            <div class="divider-wrapper d-flex col-md-1 ftco-animate">
+                <div class="divider text-golden block-6"></div>
+            </div>
+            <div class="col-md-5 d-flex align-self-stretch ftco-animate">
                 <div class="media block-6 services p-3 py-4 d-block text-center">
                     <div class="icon mb-3">
                         <span class="flaticon-construction"></span>
@@ -267,7 +271,7 @@
 <!-- FIM - Experimente Agora -->
 
 <!-- INÍCIO - Planos -->
-<section class="ftco-section bg-light">
+<section class="ftco-section">
     <div class="container">
         <div class="row justify-content-center mb-5 pb-5 ftco-animate">
             <div class="col-md-7 text-center heading-section">
