--- a/SupplierRanking/Content/css/login.css
+++ b/SupplierRanking/Content/css/login.css
@@ -1,34 +1,4 @@
-
-
-
-
-/*//////////////////////////////////////////////////////////////////
-[ FONT ]*/
-
-/*@font-face {
-  font-family: Poppins-Regular;
-  src: url('../fonts/poppins/Poppins-Regular.ttf'); 
-}
-
-@font-face {
-  font-family: Poppins-Bold;
-  src: url('../fonts/poppins/Poppins-Bold.ttf'); 
-}
-
-@font-face {
-  font-family: Poppins-Medium;
-  src: url('../fonts/poppins/Poppins-Medium.ttf'); 
-}
-
-@font-face {
-  font-family: Montserrat-Bold;
-  src: url('../fonts/montserrat/Montserrat-Bold.ttf'); 
-}*/
-
-/*//////////////////////////////////////////////////////////////////
-[ RESTYLE TAG ]*/
-
-* {
+﻿* {
 	margin: 0px; 
 	padding: 0px; 
 	box-sizing: border-box;
@@ -39,101 +9,10 @@ body, html {
 	font-family: Poppins-Regular, sans-serif;
 }
 
-/*---------------------------------------------*/
-a {
-	font-family: Poppins-Regular;
-	font-size: 14px;
-	line-height: 1.7;
-	color: #666666;
-	margin: 0px;
-	transition: all 0.4s;
-	-webkit-transition: all 0.4s;
-  -o-transition: all 0.4s;
-  -moz-transition: all 0.4s;
-}
-
-a:focus {
-	outline: none !important;
-}
-
-a:hover {
-	text-decoration: none;
-  color: #0b96e8;
-}
-
-/*---------------------------------------------*/
-h1,h2,h3,h4,h5,h6 {
-	margin: 0px;
-}
-
-p {
-	font-family: Poppins-Regular;
-	font-size: 14px;
-	line-height: 1.7;
-	color: #666666;
-	margin: 0px;
-}
-
-ul, li {
-	margin: 0px;
-	list-style-type: none;
-}
-
-
-/*---------------------------------------------*/
-input {
-	outline: none;
-	border: none;
-}
-
-textarea {
-  outline: none;
-  border: none;
-}
-
-textarea:focus, input:focus {
-  border-color: transparent !important;
-}
-
-input:focus::-webkit-input-placeholder { color:transparent; }
-input:focus:-moz-placeholder { color:transparent; }
-input:focus::-moz-placeholder { color:transparent; }
-input:focus:-ms-input-placeholder { color:transparent; }
-
-textarea:focus::-webkit-input-placeholder { color:transparent; }
-textarea:focus:-moz-placeholder { color:transparent; }
-textarea:focus::-moz-placeholder { color:transparent; }
-textarea:focus:-ms-input-placeholder { color:transparent; }
-
-input::-webkit-input-placeholder { color: #999999; }
-input:-moz-placeholder { color: #999999; }
-input::-moz-placeholder { color: #999999; }
-input:-ms-input-placeholder { color: #999999; }
-
-textarea::-webkit-input-placeholder { color: #999999; }
-textarea:-moz-placeholder { color: #999999; }
-textarea::-moz-placeholder { color: #999999; }
-textarea:-ms-input-placeholder { color: #999999; }
-
-/*---------------------------------------------*/
-button {
-	outline: none !important;
-	border: none;
-	background: transparent;
-}
-
-button:hover {
-	cursor: pointer;
-}
-
-iframe {
-	border: none !important;
-}
-
 
 /*//////////////////////////////////////////////////////////////////
 [ Utility ]*/
-/*.txt1 {
+.txt1 {
   font-family: Poppins-Regular;
   font-size: 13px;
   line-height: 1.5;
@@ -145,13 +24,12 @@ iframe {
   font-size: 13px;
   line-height: 1.5;
   color: #fff;
-}*/
-
+}
 
 /*//////////////////////////////////////////////////////////////////
-[ login ]*/
+[ Login ]*/
 
-/*.limiter {
+.limiter {
   width: 100%;
   margin: 0 auto;
 }
@@ -190,11 +68,9 @@ iframe {
   flex-wrap: wrap;
   justify-content: space-between;
   padding: 177px 130px 33px 95px;
-}*/
+}
 
-/*------------------------------------------------------------------
-[  ]*/
-/*.login100-pic {
+.login100-pic {
   width: 100px;
   height: 100px;
    margin-left: 66px;
@@ -203,12 +79,9 @@ iframe {
 
 .login100-pic img {
   max-width: 100%;
-}*/
+}
 
-
-/*------------------------------------------------------------------
-[  ]*/
-/*.login100-form {
+.login100-form {
   width: 290px;
   width: 310px;
   margin-top: -247px;
@@ -228,20 +101,15 @@ iframe {
   padding-bottom: 54px;
 }
 
-
 #txtlogin{
 font-family: Poppins-Bold;
 color: white;
 padding-bottom: 469px;
 margin-left: 93px;
 
-}*/
-/*.container-login100-form-btn{
-    margin-top: 300px;
-    margin-left: -150px;
-}*/
-/*---------------------------------------------*/
-/*.wrap-input100 {
+}
+
+.wrap-input100 {
   position: relative;
   width: 100%;
   z-index: 1;
@@ -260,12 +128,11 @@ margin-left: 93px;
   height: 50px;
   border-radius: 25px;
   padding: 0 30px 0 68px;
-}*/
-
+}
 
 /*------------------------------------------------------------------
 [ Focus ]*/
-/*.focus-input100 {
+.focus-input100 {
   display: block;
   position: absolute;
   border-radius: 25px;
@@ -325,11 +192,11 @@ margin-left: 93px;
 .input100:focus + .focus-input100 + .symbol-input100 {
   color: #57b846;
   padding-left: 28px;
-}*/
+}
 
 /*------------------------------------------------------------------
 [ Button ]*/
-/*.container-login100-form-btn {
+.container-login100-form-btn {
   width: 100%;
   display: -webkit-box;
   display: -webkit-flex;
@@ -369,16 +236,14 @@ margin-left: 93px;
 
 .login100-form-btn:hover {
   background: #333333;
-}*/
-
-
+}
 
 /*------------------------------------------------------------------
 [ Responsive ]*/
 
 
 
-/*@media (max-width: 992px) {
+@media (max-width: 992px) {
   .wrap-login100 {
     padding: 177px 90px 33px 85px;
   }
@@ -410,13 +275,10 @@ margin-left: 93px;
   .wrap-login100 {
     padding: 100px 15px 33px 15px;
   }
-}*/
+}
 
 
-/*------------------------------------------------------------------
-[ Alert validate ]*/
-
-/*.validate-input {
+.validate-input {
   position: relative;
 }
 
@@ -478,12 +340,11 @@ margin-left: 93px;
     visibility: visible;
     opacity: 1;
   }
-}*/
-
+}
 
 
 /*-----------------------CSS DO SWITCH TOGGLE (LOGIN)------------------------------*/
-/*.switch {
+.switch {
   position: relative;
   display: inline-block;
   width: 60px;
@@ -531,18 +392,10 @@ input:checked + .slider:before {
 }
 
 /* Rounded sliders */
-/*.slider.round {
+.slider.round {
   border-radius: 34px;
 }
 
 .slider.round:before {
   border-radius: 50%;
-}*/
-
-/*----------------------------------------------------------------------------------------*/
-
-
-
-
-
-
+}
