--- a/SupplierRanking/Views/Login/Cadastro.cshtml
+++ b/SupplierRanking/Views/Login/Cadastro.cshtml
@@ -111,7 +111,7 @@
         <!---Switch -->
         <label id="labelCheck" class="switch" style="
             margin-top: 38px;
-            margin-left: 44px; ">
+            margin-left: -69px; ">
 
             <input id="switchFornecedor" type="checkbox">
             <span class="slider round"></span>
@@ -133,11 +133,14 @@
         <div id="fisica" data-tilt="" style="will-change: transform; transform: perspective(300px) rotateX(0deg) rotateY(0deg); float: left;
                 margin: 0px 74px 10px;margin-left: 15px;padding-bottom: 51px;">
 
-            <img style="width:80px;heigth:80px;" src="/Content/images/comprador.png" img"="">
-            <h1 style="color:white;font-size:13px;">Física</h1>
+            <img style="width:80px;heigth:80px;margin-top: 156px;margin-left: -502px;"
+               src="/Content/images/comprador.png" img"="">
+            <h1 style="color:white;font-size:13px;margin-left: -481px;">
+                Física
+            </h1>
         </div>
 
-        <!---Switch -->
+        @*-Switch 
         <label id="labelCheckJuri" class="switch" style="
 
                  margin-left: -149px;
@@ -145,7 +148,7 @@
 
             <input style="margin-left: 31px;" id="switchJuridica" type="checkbox">
             <span class="slider round"></span>
-        </label>
+        </label>*@
 
 
 
@@ -155,12 +158,12 @@
 
 
 
-        <h2 class="text-center heading-section" style="margin-top: -510px;
+        @*<h2 class="text-center heading-section" style="margin-top: -510px;
             margin-left: 228px;color: white;">
 
             Crie sua Conta
 
-        </h2>
+        </h2>*@
 
 
         <!-----Formulario de login-->
